added new route named other

--- a/nginx-docker/nginx/nginx.conf
+++ b/nginx-docker/nginx/nginx.conf
@@ -1,8 +1,17 @@
+events {
+
+}
+
 http {
     server {
         listen 80;
 
         location / {
+            root /usr/share/nginx/html;
+            index index.html;
+        }
+
+        location /other/ {
             root /usr/share/nginx/html;
             index index.html;
         }
