added events block in conf file and new route

--- a/nginx-docker/nginx/nginx.conf
+++ b/nginx-docker/nginx/nginx.conf
@@ -1,7 +1,6 @@
 events {
-
+    
 }
-
 http {
     server {
         listen 80;
@@ -13,7 +12,12 @@ http {
 
         location /other/ {
             root /usr/share/nginx/html;
-            index index.html;
+            index demo.html;
+        }
+
+        location /fruits/ {
+            root /usr/share/nginx/html;
+            index demo.html;
         }
     }
 }
