added dockerfile to build a images

--- a/nginx-docker/nginx/nginx.conf
+++ b/nginx-docker/nginx/nginx.conf
@@ -1,6 +1,7 @@
 events {
-    
+
 }
+
 http {
     server {
         listen 80;
@@ -12,7 +13,7 @@ http {
 
         location /other/ {
             root /usr/share/nginx/html;
-            index demo.html;
+            index demo.html 404;
         }
 
         location /fruits/ {
